--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,14 @@
 buildscript {
-    ext.kotlinVersion = "1.5.31"
-    def gradleVersion = '7.0.2'
-    def buildInfoExtractorVersion = "4.11.0"
-    repositories {
-        maven { url "https://maven.google.com" }
-        maven { url 'https://jitpack.io' }
-        mavenCentral()
-        google()
+    ext {
+        compose_version = '1.1.0-beta01'
     }
-
-    dependencies {
-        classpath group: "org.jetbrains.kotlin", name: "kotlin-gradle-plugin", version: kotlinVersion
-        classpath group: "com.android.tools.build", name: "gradle", version: gradleVersion
-        classpath group: "org.jfrog.buildinfo", name: "build-info-extractor-gradle", version: buildInfoExtractorVersion
-    }
-}
-
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    //id "com.github.dcendents.android-maven" version "1.5"
-    id "com.jfrog.bintray" version "1.7.3"
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.5.31'
-
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
 }
 
-allprojects {
-    repositories {
-        mavenCentral()
-        maven { url "https://maven.google.com" }
-        maven { url 'https://jitpack.io' }
-        maven { url "https://repo.pointzi.com/sdk/pointzi/" }
-    }
-}
-
-Properties properties = new Properties()
-properties.load(project.rootProject.file("local.properties").newDataInputStream())
-properties.each {
-    prop ->
-        project.ext.set(prop.key, prop.value)
-}
-
-
-
-apply from: "android.gradle"
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
-dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-}
-repositories {
-    mavenCentral()
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
