--- a/mca-sdk-android/build.gradle
+++ b/mca-sdk-android/build.gradle
@@ -31,6 +31,8 @@ android {
 
 dependencies {
 
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
