--- a/mca-sdk-android/build.gradle
+++ b/mca-sdk-android/build.gradle
@@ -45,6 +45,10 @@ android {
 
 dependencies {
 
+    //paging
+    implementation "com.google.accompanist:accompanist-pager:0.13.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.13.0"
+
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
 
     implementation 'androidx.core:core-ktx:1.7.0'
