--- a/mca-sdk-android/src/main/AndroidManifest.xml
+++ b/mca-sdk-android/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.covergenius.mca_sdk_android">
 
-    <application>
+    <application
+        android:name=".App">
         <activity
             android:name="com.covergenius.mca_sdk_android.MainActivity"
             android:exported="false"
