--- a/mca-sdk-android/src/main/AndroidManifest.xml
+++ b/mca-sdk-android/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.covergenius.mca_sdk_android">
 
     <application
-        android:name=".App">
+        android:name=".presentation.App">
         <activity
-            android:name="com.covergenius.mca_sdk_android.MainActivity"
+            android:name="com.covergenius.mca_sdk_android.presentation.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.Mcasdkandroid" />
