--- a/mca-sdk-android/build.gradle
+++ b/mca-sdk-android/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation'com.squareup.retrofit2:converter-scalars:2.5.0'
 
 
 
