--- a/mca-sdk-android/build.gradle
+++ b/mca-sdk-android/build.gradle
@@ -98,6 +98,10 @@ dependencies {
     //datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    //pusher
+
+    implementation "com.pusher:pusher-java-client:2.2.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
