--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 
 dependencies {
     implementation 'androidx.ui:ui-foundation:0.1.0-dev03'
+    implementation 'com.github.ibuildgenius:mca-android-sdk:1.0.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
