--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,11 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven {
+            url "https://jitpack.io"
+            credentials { username authToken }
+        }
+
     }
 }
 
