fix build issue with jitpack

--- a/mca-sdk-android/build.gradle
+++ b/mca-sdk-android/build.gradle
@@ -122,7 +122,7 @@ publishing {
         release(MavenPublication) {
             groupId = "com.github.ibuildgenius"
             artifactId = "mca-android-sdk"
-            version = "1.0.1"
+            version = '1.0.2'
 
             afterEvaluate {
                 from(components["release"])
